--- a/Zhihu.Universal/Zhihu/View/MainPage.xaml
+++ b/Zhihu.Universal/Zhihu/View/MainPage.xaml
@@ -80,7 +80,7 @@
                         <!--<Setter Target="MasterColumn.Width" Value="*"/>-->
                         <!--<Setter Target="MasterColumn.MinWidth" Value="450"/>-->
                         <Setter Target="MasterColumn.Width" Value="600"/>
-                        <Setter Target="DetailColumn.Width" Value="1.6*"/>
+                        <Setter Target="DetailColumn.Width" Value="*"/>
                         <Setter Target="NavMenuList.Visibility" Value="Visible"/>
                         <!--<Setter Target="FrameContainer.Margin" Value="30 30 30 30"/>-->
                         <Setter Target="NavCommandBar.Visibility" Value="Collapsed"/>
