--- a/Zhihu.Universal/Zhihu/View/Article/ArticlePage.xaml
+++ b/Zhihu.Universal/Zhihu/View/Article/ArticlePage.xaml
@@ -87,7 +87,7 @@
         </Grid.RowDefinitions>
 
         <!--Article Content-->
-        <controls:RichBlock Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+        <controls:RichBlock Grid.Row="0" Margin="0 20 0 0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                             FooterTemplate="{StaticResource FooterTemplate}"
                             HeaderTemplate="{StaticResource ArticleHeaderTemplate}"
                             Paragraphs="{Binding Path=Detail.Content, Converter={StaticResource HtmlConverter}}"/>
