--- a/Zhihu.Universal/Zhihu/View/CollectionPage.xaml
+++ b/Zhihu.Universal/Zhihu/View/CollectionPage.xaml
@@ -112,10 +112,8 @@
                         <AdaptiveTrigger MinWindowWidth="900"/>
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="MasterColumn.Width" Value="*"/>
-                        <Setter Target="MasterColumn.MinWidth" Value="450"/>
-                        <Setter Target="MasterColumn.MaxWidth" Value="650"/>
-                        <Setter Target="DetailColumn.Width" Value="1.6*"/>
+                        <Setter Target="MasterColumn.Width" Value="600"/>
+                        <Setter Target="DetailColumn.Width" Value="*"/>
                         <!--<Setter Target="FrameContainer.Margin" Value="30 30 30 30"/>-->
                         <Setter Target="FrameContainer.Visibility" Value="Visible"/>
                     </VisualState.Setters>
