ListViewItemContainerStyle; Store update commit;

--- a/Zhihu.Universal/Zhihu/Controls/RichBlock.xaml
+++ b/Zhihu.Universal/Zhihu/Controls/RichBlock.xaml
@@ -16,7 +16,7 @@
               IsItemClickEnabled="False"
               IncrementalLoadingTrigger="Edge"
               IncrementalLoadingThreshold="5"
-              ItemContainerStyle="{StaticResource ListViewItemStyle}"
+              ItemContainerStyle="{StaticResource ArticleStyle}"
               
               SelectionMode="Single"
               
